Project

General

Profile

Actions

Bug #1155

closed

in.ftpd sometimes starts with SIGALRM blocked

Added by Gary Mills almost 12 years ago. Updated almost 12 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Category:
cmd - userland programs
Start date:
2011-06-26
Due date:
% Done:

100%

Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
External Bug:

Description

On a moderately busy anonymous FTP server, in.ftpd children will slowly accumulate.
This happens because the signal mask inherited from the parent, inetd, sometimes has SIGALRM blocked.
When the FTP client disappears without closing the TCP connection, the timeout built in to
in.ftpd sometimes fails because the signal is never delivered.

This is the same as Solaris bug CR 6913800

Actions #1

Updated by Albert Lee almost 12 years ago

  • Category set to cmd - userland programs
  • Status changed from New to Resolved
  • % Done changed from 0 to 100
  • Tags deleted (needs-triage)

Fixed in:
changeset: 13428:a9dfa4813bcd
tag: tip
user: Gary Mills <>
date: Fri Aug 12 16:07:25 2011 -0400
files: usr/src/cmd/cmd-inet/usr.lib/inetd/inetd.c
description:
1155 in.ftpd sometimes starts with SIGALRM blocked
Reviewed by: Richard Lowe <>
Reviewed by: Garrett D'Amore <>
Reviewed by: Eric Schrock <>
Reviewed by: Gordon Ross <>
Approved by: Albert Lee <>

Actions

Also available in: Atom PDF